@@ -695,74 +695,6 @@ int gridSplitEdgeRepeat(Grid *grid, Queue *queue, int n0, int n1 )
   gridSetMinInsertCost(grid,1.0e-4);
   
   newnode = gridSplitEdgeForce( grid, queue, n0, n1 );
-
-  for (try = 0; try < 1 && EMPTY == newnode ; try++ ) {
-    
-    if (grid != gridEquator( grid, n0, n1 )) {
-      gridSetMinInsertCost(grid,existing_min);
-      return EMPTY;
-    }
-    for ( iequ=0 ; iequ<gridNEqu(grid) ; iequ++ ) {
-      node = gridEqu(grid,iequ);
-      if (!gridGeometryFace(grid,node) ){
-	gridSmoothNodeVolumeSimplex( grid, newnode );
-      }
-    }
-    worstnode = EMPTY;
-    worstjacdet = DBL_MAX;
-    for ( iequ=0 ; iequ<gridNEqu(grid) ; iequ++ ) {
-      node = gridEqu(grid,iequ);
-      if (!gridGeometryFace(grid,node) ){
-	gridNodeMinCellJacDet2(grid, node, &jacdet );
-	if (jacdet < worstjacdet) {
-	  worstjacdet = jacdet;
-	  worstnode = node;
-	}
-      }
-    }
-
-    newnode0 = gridSplitEdgeForce( grid, queue, n0, worstnode );
-    newnode1 = gridSplitEdgeForce( grid, queue, n1, worstnode );
-    newnode = gridSplitEdgeForce( grid, queue, n0, n1 );
-    printf("try %d newnode0 %d newnode1 %d newnode %d\n",
-	   try,newnode0,newnode1,newnode);
-    
-  }
-  
-  for (try = 0; try < 1 && EMPTY == newnode ; try++ ) {
-    
-    if (grid != gridEquator( grid, n0, n1 )) {
-      gridSetMinInsertCost(grid,existing_min);
-      return EMPTY;
-    }
-    nequ = gridNEqu(grid);
-    for ( iequ=nequ-1 ; iequ>0 ; iequ-- ) {
-      if (grid != gridEquator( grid, n0, n1 )) {
-	gridSetMinInsertCost(grid,existing_min);
-	return EMPTY;
-      }
-      newnode0 = gridSplitEdgeForce( grid, queue,
-				     gridEqu(grid,iequ), gridEqu(grid,iequ-1) );
-      printf("TRY %d  newnode0 %d\n",
-	     try,newnode0);
-    }
-
-    if (grid != gridEquator( grid, n0, n1 )) {
-      gridSetMinInsertCost(grid,existing_min);
-      return EMPTY;
-    }
-    for ( iequ=0 ; iequ<gridNEqu(grid) ; iequ++ ) {
-      node = gridEqu(grid,iequ);
-      if (!gridGeometryFace(grid,node) ){
-	gridNodeMinCellJacDet2(grid, node, &jacdet );
-      }
-    }
-
-    newnode = gridSplitEdgeForce( grid, queue, n0, n1 );
-    printf("TRY %d  newnode %d\n",
-	   try,newnode);
-    
-  }
   
   gridSetMinInsertCost(grid,existing_min);
 
